<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/Background">

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline40"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.75239396"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline41" app:layout_constraintGuide_percent="0.85"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline75"
            app:layout_constraintGuide_percent="0.45"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline88"
            app:layout_constraintGuide_percent="0.15"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline14" app:layout_constraintGuide_percent="0.25"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline39"
            app:layout_constraintGuide_percent="0.5"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline76"
            app:layout_constraintGuide_percent="0.03"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline78"
            app:layout_constraintGuide_percent="0.125"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline77"
            app:layout_constraintGuide_percent="0.22"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline79"
            app:layout_constraintGuide_percent="0.28"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline81"
            app:layout_constraintGuide_percent="0.375"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline80"
            app:layout_constraintGuide_percent="0.47"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline82"
            app:layout_constraintGuide_percent="0.53"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline84"
            app:layout_constraintGuide_percent="0.625"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline83"
            app:layout_constraintGuide_percent="0.72"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline85"
            app:layout_constraintGuide_percent="0.78"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline87"
            app:layout_constraintGuide_percent="0.875"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline86"
            app:layout_constraintGuide_percent="0.97"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn_study_gochapter8"
            app:layout_constraintBottom_toTopOf="@+id/guideline14" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_margin="8dp" android:background="@drawable/btn_subject_select">

    </android.support.constraint.ConstraintLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideline76" app:layout_constraintEnd_toStartOf="@+id/guideline75"
            app:layout_constraintStart_toStartOf="@+id/guideline88"
            app:layout_constraintBottom_toTopOf="@+id/guideline77" android:background="@drawable/img_btn_chapter_8"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline41" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline75" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline78"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline76"
            android:gravity="center" android:textColor="@color/OnPrimary" android:textStyle="bold"
            app:autoSizeMaxTextSize="200dp" app:autoSizeMinTextSize="20dp" app:autoSizeStepGranularity="4dp"
            app:fontFamily="@font/kukdetopokki"
            app:autoSizeTextType="uniform" android:text="@string/chapter_8_name"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline41" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline75" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline77"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline78"
            android:gravity="center" android:textColor="@color/OnPrimary" android:textStyle="bold"
            app:autoSizeMaxTextSize="200dp" app:autoSizeMinTextSize="20dp" app:autoSizeStepGranularity="4dp"
            app:fontFamily="@font/kukdetopokki"
            app:autoSizeTextType="uniform" android:text="-제 8 편-"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_study_gochapter9"
            app:layout_constraintBottom_toTopOf="@+id/guideline39" app:layout_constraintTop_toTopOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_margin="8dp"
            android:background="@drawable/btn_subject_select">

    </android.support.constraint.ConstraintLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideline79" app:layout_constraintEnd_toStartOf="@+id/guideline75"
            app:layout_constraintStart_toStartOf="@+id/guideline88"
            app:layout_constraintBottom_toTopOf="@+id/guideline80" android:background="@drawable/img_btn_chapter_9"/>
    <TextView
            android:text="@string/chapter_9_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline41" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline75" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline81"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline79"
            app:autoSizeMaxTextSize="200dp" app:autoSizeMinTextSize="20dp" app:autoSizeStepGranularity="4dp"
            app:autoSizeTextType="uniform" android:gravity="center" android:textStyle="bold"
            app:fontFamily="@font/kukdetopokki"
            android:textColor="@color/OnPrimary"/>
    <TextView
            android:text="-제 9 편-"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline41" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline75" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline80"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline81"
            app:autoSizeMaxTextSize="200dp" app:autoSizeMinTextSize="20dp" app:autoSizeStepGranularity="4dp"
            app:autoSizeTextType="uniform" android:gravity="center" android:textStyle="bold"
            app:fontFamily="@font/kukdetopokki"
            android:textColor="@color/OnPrimary"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_study_gochapter10"
            app:layout_constraintBottom_toTopOf="@+id/guideline40" app:layout_constraintTop_toTopOf="@+id/guideline39"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.751"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_margin="8dp"
            android:background="@drawable/btn_subject_select">

    </android.support.constraint.ConstraintLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideline82" app:layout_constraintEnd_toStartOf="@+id/guideline75"
            app:layout_constraintStart_toStartOf="@+id/guideline88"
            app:layout_constraintBottom_toTopOf="@+id/guideline83" android:background="@drawable/img_btn_chapter_10"/>
    <TextView
            android:text="@string/chapter_10_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline41" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline84"
            app:layout_constraintStart_toStartOf="@+id/guideline75" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline82"
            app:autoSizeMaxTextSize="200dp" app:autoSizeMinTextSize="20dp" app:autoSizeStepGranularity="4dp"
            app:autoSizeTextType="uniform" android:gravity="center" android:textStyle="bold"
            app:fontFamily="@font/kukdetopokki"
            android:textColor="@color/OnPrimary"/>
    <TextView
            android:text="-제 10 편-"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline41" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline83"
            app:layout_constraintStart_toStartOf="@+id/guideline75" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline84"
            app:autoSizeMaxTextSize="200dp" app:autoSizeMinTextSize="20dp" app:autoSizeStepGranularity="4dp"
            app:autoSizeTextType="uniform" android:gravity="center" android:textStyle="bold"
            app:fontFamily="@font/kukdetopokki"
            android:textColor="@color/OnPrimary"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_study_gochapter11" app:layout_constraintTop_toTopOf="@+id/guideline40"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_margin="8dp"
            android:background="@drawable/btn_subject_select">

    </android.support.constraint.ConstraintLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideline85" app:layout_constraintEnd_toStartOf="@+id/guideline75"
            app:layout_constraintStart_toStartOf="@+id/guideline88"
            app:layout_constraintBottom_toTopOf="@+id/guideline86" android:background="@drawable/img_btn_chapter_11"/>
    <TextView
            android:text="@string/chapter_11_name"
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline87" app:layout_constraintEnd_toStartOf="@+id/guideline41"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline75"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline85" app:autoSizeMaxTextSize="200dp"
            app:autoSizeMinTextSize="20dp" app:autoSizeStepGranularity="4dp" app:autoSizeTextType="uniform"
            app:fontFamily="@font/kukdetopokki"
            android:gravity="center" android:textStyle="bold" android:textColor="@color/OnPrimary"/>
    <TextView
            android:text="-제 11 편-"
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline86" app:layout_constraintEnd_toStartOf="@+id/guideline41"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline87" app:layout_constraintStart_toStartOf="@+id/guideline75"
            android:layout_marginStart="8dp" app:autoSizeMaxTextSize="200dp" app:autoSizeMinTextSize="20dp"
            app:autoSizeStepGranularity="4dp" app:autoSizeTextType="uniform" android:gravity="center"
            app:fontFamily="@font/kukdetopokki"
            android:textStyle="bold" android:textColor="@color/OnPrimary"/>
</android.support.constraint.ConstraintLayout>