<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:padding="0dp"
                                             android:layout_margin="0dp">

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline36"
            app:layout_constraintGuide_percent="0.333"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline37"
            app:layout_constraintGuide_percent="0.666"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline74"
            app:layout_constraintGuide_percent="0.1"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline59"
            app:layout_constraintGuide_percent="0.45"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline42"
            app:layout_constraintGuide_percent="0.95"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline56"
            app:layout_constraintGuide_percent="0.05"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline57"
            app:layout_constraintGuide_percent="0.165"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline58"
            app:layout_constraintGuide_percent="0.28"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline60"
            app:layout_constraintGuide_percent="0.38"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline61"
            app:layout_constraintGuide_percent="0.495"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline62"
            app:layout_constraintGuide_percent="0.61"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline63"
            app:layout_constraintGuide_percent="0.72"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline64"
            app:layout_constraintGuide_percent="0.835"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline73"
            app:layout_constraintGuide_percent="0.95"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn_study_gochapter5"
            app:layout_constraintBottom_toTopOf="@+id/guideline36" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="@drawable/btn_subject_select" android:layout_margin="8dp">

    </android.support.constraint.ConstraintLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline56" app:layout_constraintEnd_toStartOf="@+id/guideline59"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline74"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline58" android:background="@drawable/img_btn_chapter_5"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline59" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline57"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline56"
            android:layout_margin="8dp" android:gravity="center" android:textColor="@color/OnPrimary"
            android:text="@string/chapter_5_name" android:id="@+id/textView8" android:textStyle="bold"
            app:autoSizeMaxTextSize="200dp" app:autoSizeMinTextSize="20dp"
            app:autoSizeStepGranularity="4dp"
            app:fontFamily="@font/kukdetopokki"
            app:autoSizeTextType="uniform" app:layout_constraintEnd_toStartOf="@+id/guideline42"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline59"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline58" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline57" android:layout_margin="8dp" android:gravity="center"
            android:textColor="@color/OnPrimary" android:text="-제 5 편-" android:id="@+id/textView9"
            android:textStyle="bold" app:autoSizeMaxTextSize="200dp" app:autoSizeMinTextSize="20dp"
            app:autoSizeStepGranularity="4dp"
            app:fontFamily="@font/kukdetopokki"
            app:autoSizeTextType="uniform" app:layout_constraintEnd_toStartOf="@+id/guideline42"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline37"
            app:layout_constraintTop_toTopOf="@+id/guideline36" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_study_gochapter6" android:layout_margin="8dp"
            android:background="@drawable/btn_subject_select">

    </android.support.constraint.ConstraintLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline59" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline74" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline62" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline60" android:background="@drawable/img_btn_chapter_6"/>
    <TextView
            android:text="@string/chapter_6_name"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/textView6"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline59" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline61"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline60"
            android:textStyle="bold" android:gravity="center" android:textColor="@color/OnPrimary"
            app:autoSizeMaxTextSize="200dp" app:autoSizeMinTextSize="20dp"
            app:autoSizeStepGranularity="4dp"
            app:fontFamily="@font/kukdetopokki"
            app:autoSizeTextType="uniform" app:layout_constraintEnd_toStartOf="@+id/guideline42"/>
    <TextView
            android:text="-제 6 편-"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/textView7"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline59"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline62" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline61" android:textStyle="bold" android:gravity="center"
            android:textColor="@color/OnPrimary" app:autoSizeMaxTextSize="200dp" app:autoSizeMinTextSize="20dp"
            app:autoSizeStepGranularity="4dp"
            app:fontFamily="@font/kukdetopokki"
            app:autoSizeTextType="uniform" app:layout_constraintEnd_toStartOf="@+id/guideline42"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_study_gochapter7" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="@+id/guideline37"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_margin="8dp"
            android:background="@drawable/btn_subject_select">

    </android.support.constraint.ConstraintLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/img_btn_chapter_7" app:layout_constraintEnd_toStartOf="@+id/guideline59"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline74"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline73"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline63"/>
    <TextView
            android:text="@string/chapter_7_name"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/textView10"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline59" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline64"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline63"
            android:textStyle="bold" android:gravity="center" android:textColor="@color/OnPrimary"
            app:autoSizeMaxTextSize="200dp" app:autoSizeMinTextSize="20dp"
            app:autoSizeStepGranularity="4dp"
            app:fontFamily="@font/kukdetopokki"
            app:autoSizeTextType="uniform" app:layout_constraintEnd_toStartOf="@+id/guideline42"/>
    <TextView
            android:text="-제 7 편-"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/textView11"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline59"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline73" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline64" android:textStyle="bold" android:gravity="center"
            android:textColor="@color/OnPrimary" app:autoSizeMaxTextSize="200dp" app:autoSizeMinTextSize="20dp"
            app:autoSizeStepGranularity="4dp"
            app:fontFamily="@font/kukdetopokki"
            app:autoSizeTextType="uniform" app:layout_constraintEnd_toStartOf="@+id/guideline42"/>
</android.support.constraint.ConstraintLayout>